zellij-utils/src/snapshots/zellij_utils__session_serialization__tests__can_serialize_multiple_tabs.snap
---
source: zellij-utils/src/session_serialization.rs
assertion_line: 2025
expression: kdl.0
---
layout {
    tab canvas_state="materialized" name="First tab" {
        pane
    }
    tab canvas_state="materialized" name="Second tab" {
        pane split_direction="vertical" {
            pane size=10
            pane size=10
        }
    }
}

