zellij-utils/src/snapshots/zellij_utils__session_serialization__tests__can_serialize_tab_hide_floating_panes.snap
---
source: zellij-utils/src/session_serialization.rs
assertion_line: 1667
expression: kdl.0
---
layout {
    tab canvas_state="materialized" name="Tab #1" hide_floating_panes=true {
    }
}

