zellij-utils/src/snapshots/zellij_utils__session_serialization__tests__can_serialize_tab_name.snap
---
source: zellij-utils/src/session_serialization.rs
assertion_line: 1641
expression: kdl.0
---
layout {
    tab canvas_state="materialized" name="my \"tab \\name" {
    }
}

