zellij-utils/src/snapshots/zellij_utils__session_serialization__tests__can_serialize_tab_with_multiple_stacked_panes_in_the_same_node.snap
---
source: zellij-utils/src/session_serialization.rs
assertion_line: 1899
expression: kdl.0
---
layout {
    tab canvas_state="materialized" name="Tab with \"stacked panes\"" {
        pane size=12 stacked=true {
            pane
            pane expanded=true
            pane
        }
        pane size=10
        pane size=12 stacked=true {
            pane
            pane expanded=true
            pane
        }
    }
}

